--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
      <meta charset="UTF-8"> 
      <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
      <title>Special Design</title> 
-     <link rel="stylesheet" href="css/font-awesome.min.css"> 
-     <link rel="stylesheet" href="css/normalize.css"> 
-     <link rel="stylesheet" href="css/master.css"> 
+     <link rel="stylesheet" href="font-awesome.min.css"> 
+     <link rel="stylesheet" href="normalize.css"> 
+     <link rel="stylesheet" href="style.css"> 
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap"> 
    </head> 
    <body> 
@@ -313,6 +313,6 @@
      <div class="footer">Created With Love By Osama Elzero</div> 
      <!-- End Footer --> 
       
-     <script src="js/master.js"></script> 
+     <script src="main.js"></script> 
    </body> 
  </html>
